--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "clean-webpack-plugin": "^0.1.19",
+    "connected-react-router": "^4.2.3",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.10",
     "enzyme": "^3.3.0",
@@ -62,6 +63,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "eslint-watch": "^3.1.3",
     "file-loader": "^1.1.5",
+    "history": "^4.7.2",
     "html-webpack-plugin": "^3.0.7",
     "identity-obj-proxy": "^3.0.0",
     "istanbul": "^0.4.4",
@@ -70,13 +72,28 @@
     "jest-cli": "^22.4.2",
     "jest-css-modules": "^1.1.0",
     "jest-styled-components": "^5.0.0",
+    "material-ui": "^1.0.0-beta.38",
+    "moment": "^2.19.2",
     "npm-watch": "^0.3.0",
     "prop-types": "^15.6.0",
+    "ramda": "^0.25.0",
     "react": "^16.1.1",
+    "react-animations": "^1.0.0",
+    "react-browser-detection": "^1.0.4",
     "react-dom": "^16.1.1",
     "react-hot-loader": "^4.0.0",
+    "react-redux": "^5.0.5",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.1.1",
     "react-test-renderer": "^16.2.0",
+    "react-transition-group": "^2.2.1",
+    "redux": "^3.6.0",
+    "redux-form": "^6.8.0",
+    "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.3.0",
+    "redux-persist": "^4.8.3",
+    "redux-saga": "^0.16.0",
+    "redux-ui": "^0.1.1",
     "standard": "^11.0.1",
     "style-loader": "^0.20.3",
     "styled-components": "^3.2.3",
