add header component and initial theme

--- a/package.json
+++ b/package.json
@@ -73,14 +73,15 @@
     "jest-css-modules": "^1.1.0",
     "jest-styled-components": "^5.0.0",
     "material-ui": "^1.0.0-beta.38",
+    "material-ui-icons": "^1.0.0-beta.36",
     "moment": "^2.19.2",
     "npm-watch": "^0.3.0",
     "prop-types": "^15.6.0",
     "ramda": "^0.25.0",
-    "react": "^16.1.1",
+    "react": "^16.2.0",
     "react-animations": "^1.0.0",
     "react-browser-detection": "^1.0.4",
-    "react-dom": "^16.1.1",
+    "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
     "react-redux": "^5.0.5",
     "react-router-bootstrap": "^0.24.4",
