--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   "bugs": {
     "url": "https://github.com/schnogz/office-playlistify/issues"
   },
+  "keywords": [
+    "spotify",
+    "playlists",
+    "react",
+    "redux"
+  ],
   "engines": {
     "node": ">= 9.5"
   },
+  "proxy": "http://localhost:3001/",
   "scripts": {
     "analyze": "ANALYZE=true NODE_ENV=production webpack-cli --config webpack.config.js",
     "build": "webpack-cli --config webpack.config.js --progress --colors",
@@ -21,14 +28,15 @@
     "ci:build": "webpack-cli --config webpack.config.js --display-error-details",
     "ci:build:prod": "NODE_ENV=production webpack-cli --config webpack.config.js --display-error-details",
     "generate": "babel-node ./tools/generateDefaultLocale.js",
-    "start": "webpack-dev-server --config webpack.config.js --progress --colors --watch",
-    "start:prod": "NODE_ENV=production webpack-dev-server --config webpack.config.js --progress --colors --watch",
+    "start": "node ./server/index.js",
+    "start:prod": "NODE_ENV=production node ./server/index.js",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:debug": "node --inspect-brk jest --runInBand",
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "autoprefixer": "6.7.7",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^8.0.2",
@@ -47,13 +55,19 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
+    "chalk": "1.1.3",
     "clean-webpack-plugin": "^0.1.19",
     "connected-react-router": "^4.2.3",
     "copy-webpack-plugin": "^4.5.1",
+    "cors": "2.8.3",
     "css-loader": "^0.28.10",
+    "detect-port": "1.1.2",
+    "dotenv": "4.0.0",
+    "ejs": "2.5.6",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
+    "errorhandler": "1.5.0",
     "eslint": "^4.18.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-loader": "^2.0.0",
@@ -62,9 +76,12 @@
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-watch": "^3.1.3",
+    "express": "4.15.3",
+    "express-jwt": "5.3.0",
     "file-loader": "^1.1.5",
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.0.7",
+    "http-proxy-middleware": "0.17.4",
     "identity-obj-proxy": "^3.0.0",
     "istanbul": "^0.4.4",
     "istanbul-coveralls": "^1.0.3",
@@ -72,9 +89,14 @@
     "jest-cli": "^22.4.2",
     "jest-css-modules": "^1.1.0",
     "jest-styled-components": "^5.0.0",
+    "json-loader": "0.5.4",
+    "jsonwebtoken": "7.4.1",
     "material-ui": "^1.0.0-beta.38",
     "material-ui-icons": "^1.0.0-beta.36",
+    "method-override": "2.3.9",
+    "methods": "1.1.2",
     "moment": "^2.19.2",
+    "morgan": "1.8.1",
     "npm-watch": "^0.3.0",
     "prop-types": "^15.6.0",
     "ramda": "^0.25.0",
@@ -95,12 +117,16 @@
     "redux-persist": "^4.8.3",
     "redux-saga": "^0.16.0",
     "redux-ui": "^0.1.1",
+    "request": "2.81.0",
+    "request-ip": "2.0.1",
+    "slug": "0.9.1",
+    "spotify-web-api-node": "2.4.0",
     "standard": "^11.0.1",
     "style-loader": "^0.20.3",
     "styled-components": "^3.2.3",
     "webpack": "^4.1.1",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-hot-middleware": "^2.21.2"
   }
 }
