--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "build:prod": "NODE_ENV=production webpack-cli --config webpack.config.js --progress --colors",
     "ci:build": "webpack-cli --config webpack.config.js --display-error-details",
     "ci:build:prod": "NODE_ENV=production webpack-cli --config webpack.config.js --display-error-details",
+    "lint": "eslint './client/**/*.js'",
+    "lint:fix": "eslint './client/**/*.js' --fix",
     "start": "node ./server/index.js",
     "start:prod": "NODE_ENV=production node ./server/index.js",
     "test": "jest",
@@ -34,7 +36,7 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
-    "autoprefixer": "6.7.7",
+    "autoprefixer": "^8.2.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^8.0.2",
@@ -52,16 +54,17 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
+    "body-parser": "^1.18.2",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
-    "chalk": "1.1.3",
+    "chalk": "2.3.2",
     "clean-webpack-plugin": "^0.1.19",
     "connected-react-router": "^4.2.3",
     "copy-webpack-plugin": "^4.5.1",
-    "cors": "2.8.3",
+    "cors": "2.8.4",
     "css-loader": "^0.28.10",
-    "detect-port": "1.1.2",
-    "dotenv": "4.0.0",
-    "ejs": "2.5.6",
+    "detect-port": "1.2.2",
+    "dotenv": "5.0.1",
+    "ejs": "2.5.7",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
@@ -74,12 +77,12 @@
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-watch": "^3.1.3",
-    "express": "4.15.3",
-    "express-jwt": "5.3.0",
+    "express": "4.16.3",
+    "express-jwt": "5.3.1",
     "file-loader": "^1.1.5",
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.0.7",
-    "http-proxy-middleware": "0.17.4",
+    "http-proxy-middleware": "0.18.0",
     "identity-obj-proxy": "^3.0.0",
     "istanbul": "^0.4.4",
     "istanbul-coveralls": "^1.0.3",
@@ -87,14 +90,14 @@
     "jest-cli": "^22.4.2",
     "jest-css-modules": "^1.1.0",
     "jest-styled-components": "^5.0.0",
-    "json-loader": "0.5.4",
-    "jsonwebtoken": "7.4.1",
+    "json-loader": "0.5.7",
+    "jsonwebtoken": "8.2.0",
     "material-ui": "^1.0.0-beta.38",
     "material-ui-icons": "^1.0.0-beta.36",
-    "method-override": "2.3.9",
+    "method-override": "2.3.10",
     "methods": "1.1.2",
     "moment": "^2.19.2",
-    "morgan": "1.8.1",
+    "morgan": "1.9.0",
     "npm-watch": "^0.3.0",
     "prop-types": "^15.6.0",
     "ramda": "^0.25.0",
@@ -109,16 +112,16 @@
     "react-test-renderer": "^16.2.0",
     "react-transition-group": "^2.2.1",
     "redux": "^3.6.0",
-    "redux-form": "^6.8.0",
+    "redux-form": "^7.3.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.3.0",
     "redux-persist": "^4.8.3",
     "redux-saga": "^0.16.0",
     "redux-ui": "^0.1.1",
-    "request": "2.81.0",
-    "request-ip": "2.0.1",
+    "request": "2.85.0",
+    "request-ip": "2.0.2",
     "slug": "0.9.1",
-    "spotify-web-api-node": "2.4.0",
+    "spotify-web-api-node": "3.0.0",
     "standard": "^11.0.1",
     "style-loader": "^0.20.3",
     "styled-components": "^3.2.3",
