fix node environment passing for windows machines

--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
   "proxy": "http://localhost:3001/",
   "scripts": {
     "build": "webpack-cli --config webpack.config.js --progress --colors",
-    "build:prod": "NODE_ENV=production webpack-cli --config webpack.config.js --progress --colors",
+    "build:prod": "set NODE_ENV=production && webpack-cli --config webpack.config.js --progress --colors",
     "ci:build": "webpack-cli --config webpack.config.js --display-error-details",
-    "ci:build:prod": "NODE_ENV=production webpack-cli --config webpack.config.js --display-error-details",
+    "ci:build:prod": "set NODE_ENV=production && webpack-cli --config webpack.config.js --display-error-details",
     "lint": "eslint './client/**/*.js'",
     "lint:fix": "eslint './client/**/*.js' --fix",
     "start": "node ./server/index.js",
-    "start:prod": "NODE_ENV=production node ./server/index.js",
+    "start:prod": "set NODE_ENV=production && node ./server/index.js",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:debug": "node --inspect-brk jest --runInBand",
