--- a/.eslintrc
+++ b/.eslintrc
@@ -7,29 +7,33 @@
       "jsx": true
     }
   },
-  "plugins": ["react"],
+  "plugins": ["babel", "react", "jest"],
   "env": {
     "es6": true,
-    "jest": true
+    "jest": true,
+    "node": true
   },
   "globals": {
     "fetch": true,
     "Headers": true
   },
-  // 0 = off, 1 = warn, 2 = error
-  // these rules get extended in each packages own .eslintrc
   "rules": {
     "camelcase": 0,
     "no-case-declarations": 0,
-    "no-console": 0,
+    "no-console": 2,
     "no-underscore-dangle": 0,
     "no-alert": 2,
     "require-yield": 2,
+    "jest/no-disabled-tests": 1,
+    "jest/no-focused-tests": 2,
+    "jest/no-identical-title": 2,
+    "jest/prefer-to-have-length": 0,
+    "jest/valid-expect": 2,
     "react/display-name": 0,
-    "react/forbid-prop-types": [1, { "forbid": ["any"] }],
+    "react/forbid-prop-types": 0,
     "react/jsx-boolean-value": 1,
     "react/jsx-closing-bracket-location": 0,
-    "react/jsx-curly-spacing": 1,
+    "react/jsx-curly-spacing": 2,
     "react/jsx-indent-props": 0,
     "react/jsx-key": 0,
     "react/jsx-max-props-per-line": 0,
@@ -37,10 +41,10 @@
     "react/jsx-no-duplicate-props": 2,
     "react/jsx-no-literals": 0,
     "react/jsx-no-undef": 2,
-    "react/jsx-pascal-case": 1,
+    "react/jsx-pascal-case": 2,
     "react/jsx-sort-prop-types": 0,
     "react/jsx-sort-props": 0,
-    "react/jsx-uses-react": 1,
+    "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
     "react/no-danger": 1,
     "react/no-did-mount-set-state": 2,
@@ -48,11 +52,12 @@
     "react/no-direct-mutation-state": 2,
     "react/no-multi-comp": 0,
     "react/no-set-state": 0,
-    "react/no-unknown-property": 1,
-    "react/prefer-es6-class": 1,
+    "react/no-unknown-property": 2,
+    "react/prefer-es6-class": 2,
     "react/prop-types": 0,
-    "react/react-in-jsx-scope": 1,
-    "react/self-closing-comp": 1,
-    "react/sort-comp": 1
+    "react/react-in-jsx-scope": 2,
+    "react/self-closing-comp": 2,
+    "react/sort-comp": 2,
+    "strict": 0
   }
 }
