--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "name": "Andrew Schneider",
     "url": "https://www.schnogz.com"
   },
+  "repository": "https://github.com/schnogz/office-playlistify",
   "description": "Share and rank Spotify playlists between coworkers.",
   "homepage": "https://github.com/schnogz/office-playlistify",
   "bugs": {
@@ -35,12 +36,14 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "@material-ui/core": "^1.2.1",
+    "@material-ui/icons": "^1.1.0",
     "autoprefixer": "^8.2.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^8.0.2",
     "babel-istanbul": "~0.12.2",
-    "babel-jest": "^22.4.1",
+    "babel-jest": "^23.0.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-react-html-attrs": "^2.1.0",
@@ -55,21 +58,21 @@
     "babel-preset-stage-2": "^6.22.0",
     "body-parser": "^1.18.2",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
-    "chalk": "2.3.2",
+    "chalk": "2.4.1",
     "clean-webpack-plugin": "^0.1.19",
     "connected-react-router": "^4.2.3",
     "copy-webpack-plugin": "^4.5.1",
     "cors": "2.8.4",
     "cross-fetch": "^2.1.0",
     "css-loader": "^0.28.10",
-    "detect-port": "1.2.2",
-    "dotenv": "5.0.1",
-    "ejs": "2.5.7",
+    "detect-port": "1.2.3",
+    "dotenv": "6.0.0",
+    "ejs": "2.6.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
     "errorhandler": "1.5.0",
-    "eslint": "^4.18.1",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.8.0",
@@ -86,14 +89,12 @@
     "identity-obj-proxy": "^3.0.0",
     "istanbul": "^0.4.4",
     "istanbul-coveralls": "^1.0.3",
-    "jest": "^22.4.2",
-    "jest-cli": "^22.4.2",
+    "jest": "^23.1.0",
+    "jest-cli": "^23.1.0",
     "jest-css-modules": "^1.1.0",
     "jest-styled-components": "^5.0.0",
     "json-loader": "0.5.7",
-    "jsonwebtoken": "8.2.0",
-    "material-ui": "^1.0.0-beta.38",
-    "material-ui-icons": "^1.0.0-beta.36",
+    "jsonwebtoken": "8.2.2",
     "method-override": "2.3.10",
     "methods": "1.1.2",
     "moment": "^2.19.2",
@@ -111,22 +112,22 @@
     "react-router-dom": "^4.1.1",
     "react-test-renderer": "^16.2.0",
     "react-transition-group": "^2.2.1",
-    "redux": "^3.6.0",
+    "redux": "^4.0.0",
     "redux-form": "^7.3.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.3.0",
-    "redux-persist": "^4.8.3",
+    "redux-persist": "^5.10.0",
     "redux-saga": "^0.16.0",
     "redux-ui": "^0.1.1",
-    "request": "2.85.0",
+    "request": "2.87.0",
     "request-ip": "2.0.2",
     "slug": "0.9.1",
-    "spotify-web-api-node": "3.0.0",
+    "spotify-web-api-node": "3.1.1",
     "standard": "^11.0.1",
-    "style-loader": "^0.20.3",
+    "style-loader": "^0.21.0",
     "styled-components": "^3.2.3",
     "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12",
+    "webpack-cli": "^3.0.3",
     "webpack-dev-middleware": "^3.1.0",
     "webpack-hot-middleware": "^2.21.2"
   }
