--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "build:prod": "set NODE_ENV=production && webpack-cli --config webpack.config.js --progress --colors",
     "ci:build": "webpack-cli --config webpack.config.js --display-error-details",
     "ci:build:prod": "set NODE_ENV=production && webpack-cli --config webpack.config.js --display-error-details",
-    "lint": "eslint './client/**/*.js'",
-    "lint:fix": "eslint './client/**/*.js' --fix",
+    "lint": "eslint './**/*.js'",
+    "lint:fix": "eslint './**/*.js' --fix",
     "start": "node ./server/index.js",
     "start:prod": "set NODE_ENV=production && node ./server/index.js",
     "test": "jest",
@@ -75,6 +75,7 @@
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-loader": "^2.0.0",
+    "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-react": "^7.4.0",
@@ -130,5 +131,8 @@
     "webpack-cli": "^3.0.3",
     "webpack-dev-middleware": "^3.1.0",
     "webpack-hot-middleware": "^2.21.2"
+  },
+  "devDependencies": {
+    "eslint-plugin-jest": "^21.17.0"
   }
 }
