--- a/package.json
+++ b/package.json
@@ -39,6 +39,64 @@
     "@material-ui/core": "^1.2.1",
     "@material-ui/icons": "^1.1.0",
     "autoprefixer": "^8.2.0",
+    "body-parser": "^1.18.2",
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
+    "chalk": "2.4.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "connected-react-router": "^4.2.3",
+    "copy-webpack-plugin": "^4.5.1",
+    "cors": "2.8.4",
+    "cross-fetch": "^2.1.0",
+    "css-loader": "^0.28.10",
+    "detect-port": "1.2.3",
+    "dotenv": "6.0.0",
+    "ejs": "2.6.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
+    "errorhandler": "1.5.0",
+    "express": "4.16.3",
+    "express-jwt": "5.3.1",
+    "file-loader": "^1.1.5",
+    "history": "^4.7.2",
+    "html-webpack-plugin": "^3.0.7",
+    "http-proxy-middleware": "0.18.0",
+    "identity-obj-proxy": "^3.0.0",
+    "json-loader": "0.5.7",
+    "jsonwebtoken": "8.2.2",
+    "method-override": "2.3.10",
+    "methods": "1.1.2",
+    "moment": "^2.19.2",
+    "morgan": "1.9.0",
+    "prop-types": "^15.6.0",
+    "ramda": "^0.25.0",
+    "react": "^16.2.0",
+    "react-animations": "^1.0.0",
+    "react-browser-detection": "^1.0.4",
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.0.0",
+    "react-redux": "^5.0.5",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.1.1",
+    "react-transition-group": "^2.2.1",
+    "redux": "^4.0.0",
+    "redux-form": "^7.3.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^4.10.2",
+    "redux-saga": "^0.16.0",
+    "redux-ui": "^0.1.1",
+    "request": "2.87.0",
+    "request-ip": "2.0.2",
+    "slug": "0.9.1",
+    "spotify-web-api-node": "3.1.1",
+    "style-loader": "^0.21.0",
+    "styled-components": "^3.2.3",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^3.0.3",
+    "webpack-dev-middleware": "^3.1.0",
+    "webpack-hot-middleware": "^2.21.2"
+  },
+  "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^8.0.2",
@@ -56,83 +114,25 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
-    "body-parser": "^1.18.2",
-    "case-sensitive-paths-webpack-plugin": "^2.1.2",
-    "chalk": "2.4.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "connected-react-router": "^4.2.3",
-    "copy-webpack-plugin": "^4.5.1",
-    "cors": "2.8.4",
-    "cross-fetch": "^2.1.0",
-    "css-loader": "^0.28.10",
-    "detect-port": "1.2.3",
-    "dotenv": "6.0.0",
-    "ejs": "2.6.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.1",
-    "errorhandler": "1.5.0",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-watch": "^3.1.3",
-    "express": "4.16.3",
-    "express-jwt": "5.3.1",
-    "file-loader": "^1.1.5",
-    "history": "^4.7.2",
-    "html-webpack-plugin": "^3.0.7",
-    "http-proxy-middleware": "0.18.0",
-    "identity-obj-proxy": "^3.0.0",
     "istanbul": "^0.4.4",
     "istanbul-coveralls": "^1.0.3",
     "jest": "^23.1.0",
     "jest-cli": "^23.1.0",
     "jest-css-modules": "^1.1.0",
     "jest-styled-components": "^5.0.0",
-    "json-loader": "0.5.7",
-    "jsonwebtoken": "8.2.2",
-    "method-override": "2.3.10",
-    "methods": "1.1.2",
-    "moment": "^2.19.2",
-    "morgan": "1.9.0",
     "npm-watch": "^0.3.0",
-    "prop-types": "^15.6.0",
-    "ramda": "^0.25.0",
-    "react": "^16.2.0",
-    "react-animations": "^1.0.0",
-    "react-browser-detection": "^1.0.4",
-    "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.0.0",
-    "react-redux": "^5.0.5",
-    "react-router-bootstrap": "^0.24.4",
-    "react-router-dom": "^4.1.1",
     "react-test-renderer": "^16.2.0",
-    "react-transition-group": "^2.2.1",
-    "redux": "^4.0.0",
-    "redux-form": "^7.3.0",
-    "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.3.0",
-    "redux-persist": "^4.10.2",
-    "redux-saga": "^0.16.0",
-    "redux-ui": "^0.1.1",
-    "request": "2.87.0",
-    "request-ip": "2.0.2",
-    "slug": "0.9.1",
-    "spotify-web-api-node": "3.1.1",
-    "standard": "^11.0.1",
-    "style-loader": "^0.21.0",
-    "styled-components": "^3.2.3",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^3.0.3",
-    "webpack-dev-middleware": "^3.1.0",
-    "webpack-hot-middleware": "^2.21.2"
-  },
-  "devDependencies": {
-    "eslint-plugin-jest": "^21.17.0"
+    "standard": "^11.0.1"
   }
 }
