--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "spotify-web-api-node": "3.1.1",
     "style-loader": "^0.21.0",
     "styled-components": "^3.2.3",
+    "typeface-roboto": "0.0.54",
     "webpack": "^4.1.1",
     "webpack-cli": "^3.0.3",
     "webpack-dev-middleware": "^3.1.0",
